# CPP-Dynamic-ClassLoader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/dynamicclassloader/: CMakeLists.txt  classloader.hpp  dynamicclassutils.hpp
test/dynamicclassloader_test/: CMakeLists.txt  main.cpp
test/samplelib/: CMakeLists.txt  dynamicclassregistry.cpp  dynamicclassregistry.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  square.cpp  square.hpp
